add test article

--- a/static/article/article1.html
+++ b/static/article/article1.html
@@ -9,12 +9,14 @@
 </head>
 <body>
 <ul class="sf_article">
-    <li style="text-align: center;"><h1>sdaf;sdfa;jsafd;j;sad</h1></li>
-    <li><img src="art-img/21.jpg"></li>
-    <li>safl;jlksaf;lsja;dlfjas;dfjk;asdfjkdas;f;asd;sfdsdlakjflajflsajkf;lasjflsafd;jj;sadjf;asjf;asdfkj;sa
+    <li style="text-align: center;"><h1>文章标题</h1></li>
+    <li><img src="viewfuns.files/viewfuns227.png"></li>
+    <li>
+        段落内容
     </li>
-    <li><img src="art-img/43.jpg"></li>
-    <li>safl;jlksaf;lsja;dlfjas;dfjk;asdfjkdas;f;asd;sfdsdlakjflajflsajkf;lasjflsafd;jj;sadjf;asjf;asdfkj;sa
+    <li><img src="viewfuns.files/viewfuns227.png"></li>
+    <li>
+        段落内容
     </li>
 </ul>
 </html>
