--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>首页</title>
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <style type="text/css">
         body{
             margin: 0;
@@ -93,10 +94,34 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-default" style="margin-bottom:0">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">视范</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
+        <li ><a href="/pc/article">热点</a></li>
+        <li><a href="/pc/aboutus">关于我们</a></li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     <div class="grad" style="height: 460px;width: 100%">
         <div id="app_icon"><img src="homeimg/app.png"></div>
         <div class="app_description">视范是一款提供摄影拍照等资讯的app，让你拍照更有范儿。</div>
-        <div class="android_download"><a class="my_button">下载安卓版</a></div>
+        <div class="android_download"><a style="color:white" class="my_button">下载安卓版</a></div>
     </div>    
     <div style="height:150px;margin-top: 10px">
         <div class="erweima">
@@ -114,4 +139,8 @@
         联系邮箱:<a href="mailto:account@viewfuns.com">account@viewfuns.com</a>
         <p style="text-align:center">粤ICP备16045036号</p>
     </div>
+            <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
